# fileyard

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  INTEGRATIONS.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  manifest.yaml  package-lock.json  package.json  pyproject.toml  server.json  sitecustomize.py
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ci.yml  codeql.yml  dependency-review.yml  live-integration.yml  mutation-manual.yml  mutation-weekly.yml  nightly-drift-audit.yml  pre-commit.yml  release.yml  reusable-build-runtime-image.yml  scorecards.yml  trivy-fs.yml  trufflehog.yml  upstream-governance-manual.yml  upstream-governance-weekly.yml  zizmor.yml
apps/api/: server.py  web_api.py  web_api_execution.py  web_api_server.py
apps/cli/: AGENTS.md  CLAUDE.md  cli_app.py  cli_parser.py  fileman.py
apps/mcp/: AGENTS.md  CLAUDE.md  README.md  __init__.py  server.py  service.py
apps/webui/: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
contracts/: README.md
contracts/ai/: eval_baseline.yaml  eval_cases.yaml  human_rubric.example.json
contracts/api/: web_api.openapi.yaml
contracts/docs/: docs_manual_fact_rules.yaml  docs_nav_registry.yaml  docs_render_manifest.yaml  snapshot_scope_policy.yaml
contracts/governance/: ai_context_registry.json  change_detection_scope.json  code_scanning_alert_allowlist.yaml  collaboration_surface_policy.yaml  dependency_boundaries.yaml  done_signal_policy.yaml  english_canonical_surface_policy.yaml  governance.defaults.env  hotspot_budget.yaml  module_graph.yaml  pip_audit_allowlist.yaml  project_positioning.yaml  public_artifact_policy.yaml  public_asset_provenance.yaml  public_claims_policy.yaml  public_readiness_policy.yaml  public_surface.yaml  required_checks_policy.yaml  root_allowlist.yaml  root_change_control.yaml  runtime_language_boundary_policy.yaml  runtime_topology.yaml
contracts/proof/: manual_baseline.example.json  public_proof_contract.yaml  value_proof_registry.yaml
contracts/runtime/: config.example.toml  (+6 more)
docs/: _config.yml  architecture.md  brand_positioning.md  claude_code_mcp.md  codex_mcp.md  developer_guide.md  env_contract.md  faq.md  index.md  logging_observability.md  mcp.md  open_source_runbook.md  photo_organizer.md  public_proof.md  quickstart.md  receipt_organizer.md  review_first_ai_file_organizer.md  runner_contract.md  screenshot_organizer.md  seo_landing_map.md  usage.md
tests/: AGENTS.md  CLAUDE.md  README.md  _apply_changes_compat.py  conftest.py
tooling/: requirements-dev.lock.txt  requirements.lock.txt
(+332 files in other folders)
